--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.4.4@stable",
-        "silverstripe-themes/simple": "~3.2.0"
+        "silverstripe-themes/simple": "~3.2.0",
+        "undefinedoffset/silverstripe-nocaptcha": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
